DD-36934 Fix for NCES notification when NO financial results amended (#145)
* DD-36934 Fix for NCES notification when NO financial results amended

* DD-36934 Fix for NCES notification when NO financial results amended

---------

Co-authored-by: Sevket Arisu <sevket.arisu>